# authress-sdk.py

./: .gitignore  .openapi-generator-ignore  .travis.yml  CHANGELOG.md  README.md  contributing.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.openapi-generator/: FILES
authress/: __init__.py  authress_client.py  exceptions.py  http_client.py  rest.py
authress_sdk/: __init__.py  api_client.py  authress_client.py  http_client.py  rest.py
docs/: AccessRecord.md  AccessRecordAccount.md  AccessRecordCollection.md  AccessRecordsApi.md  AccessRequest.md  AccessRequestCollection.md  AccessRequestResponse.md  AccessTemplate.md  Account.md  AccountCollection.md  AccountLinks.md  AccountsApi.md  ApplicationDelegation.md  ApplicationsApi.md  AuthenticationTokenConfiguration.md  ClaimRequest.md  Client.md  ClientAccessKey.md  ClientCollection.md  ClientOptions.md  ClientRateLimit.md  CollectionLinks.md  Connection.md  ConnectionCollection.md  ConnectionConditions.md  ConnectionData.md  ConnectionDefaultConnectionProperties.md  ConnectionLinkingConfiguration.md  ConnectionUserDataConfiguration.md  ConnectionsApi.md  EXAMPLES.md  Extension.md  ExtensionApplication.md  ExtensionClient.md  ExtensionCollection.md  ExtensionsApi.md  Group.md  GroupCollection.md  GroupsApi.md  Identity.md  (+48 more)
test/: service_client_token_provider_test.py  test_access_record.py  test_access_record_account.py  test_access_record_collection.py  test_access_records_api.py  test_access_request.py  test_access_request_collection.py  test_access_request_response.py  (+80 more)
(+135 files in other folders)
