[tool.poetry]
name = "authress"
version = "99.99.99"
description = "Authress"
authors = ["Authress Support <support@authress.io>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com//"
keywords = ["OpenAPI", "OpenAPI-Generator", "Authress"]
include = ["authress/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <3"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
